objects/Department__c.object
<CustomObject>
    <fields>
        <fullName>D_Location__c</fullName>
        <label>D Location</label>
        <picklist>
            <picklistValues>
                <fullName>Delhi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chennai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mumbai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangalore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyderbad</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>D_No__c</fullName>
        <displayFormat>d-{0000}</displayFormat>
        <label>D No</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>No_of_Emp__c</fullName>
        <label>No of Emp</label>
        <summaryForeignKey>Employee__c.Department__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Department</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Dept Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Departments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>